Fix nav spacing error

--- a/assets/Styles/main.css
+++ b/assets/Styles/main.css
@@ -895,8 +895,6 @@ footer div {
 
   #pastEvents div {
     display: flex;
-    align-items: center;
-    justify-items: center;
   }
 
   #pastEvents img:nth-child(even) {
